# Backend_emailer

./: .env.example  .gitignore  Cargo.toml  build.docker-compose.yaml  build.rs  build_and_deploy.sh  dockerfile
proto/: email.proto
src/: email.rs  main.rs
templates/: payment_verification.hbs
templates/partials/: styles.hbs
