[package]
name = "emailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.1"
handlebars = "4.3.7"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
